<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="5dp">

    <TableLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content">

        <TableRow android:layout_marginBottom="5dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:paddingRight="15dp"
                      android:textStyle="bold"
                      android:text="@string/id"/>

            <TextView android:id="@+id/friend_id"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow android:layout_marginBottom="5dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:paddingRight="15dp"
                      android:textStyle="bold"
                      android:text="@string/name"/>

            <TextView android:id="@+id/name"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow android:layout_marginBottom="5dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:paddingRight="15dp"
                      android:textStyle="bold"
                      android:text="@string/email"/>

            <TextView android:id="@+id/email"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
        </TableRow>

    </TableLayout>

</LinearLayout>
